# qrtunnel

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md  SECURITY.md  pyproject.toml  qr.py  qrtui.py  qrtunnel.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
docs/: SETUP_GUIDE.md
qrtunnel.egg-info/: PKG-INFO
shareqr/: __main__.py  qr.py
shareqr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/qrtunnel/: __init__.py  __main__.py  app.py  config.py  constants.py  history.py  hotspot.py  keyboard.py  qr.py  server.py  streams.py  tui.py  tunnels.py  utils.py
tests/: test_checksum.py  test_history.py  test_hotspot.py  test_lan.py  test_lan_ip.py  test_no_qr.py  test_ports.py  test_progress.py  test_receive_destination.py  test_send_paths.py  test_tunnel_manager.py  test_windows_ngrok.py  test_zip_archive.py
