[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qrtunnel"
version = "3.5.1"
description = "Cross-platform file sharing via QR code. Defaults to account-free SSH tunneling on Linux/macOS."
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    { name = "Aniruth Karthik", email = "aniruthkarthik10@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "qrcode>=8.0",
    "pyngrok>=7.1.0",
    "streaming-form-data>=1.15.0",
    "werkzeug>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/aniruthkarthik/qrtunnel"
Repository = "https://github.com/aniruthkarthik/qrtunnel"

[project.scripts]
qrtunnel = "qrtunnel:main"

[tool.setuptools]
py-modules = ["qrtunnel"]
