[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qrtunnel"
version = "3.5.2"
description = "Cross-platform file sharing via QR code. Defaults to account-free SSH tunneling on Linux/macOS."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Aniruth Karthik", email = "aniruthkarthik10@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "qrcode>=7.0",
    "pyngrok>=7.1.0",
    "streaming-form-data>=1.15.0",
    "werkzeug>=3.0.0,<3.1.0"
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/aniruthkarthik/qrtunnel"
Repository = "https://github.com/aniruthkarthik/qrtunnel"

[project.scripts]
qrtunnel = "qrtunnel:main"

[tool.setuptools]
py-modules = ["qrtunnel"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["qrtunnel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
